--- a/Pages/Index.cshtml.css
+++ b/Pages/Index.cshtml.css
@@ -106,3 +106,11 @@ body {
 .routeButton:hover {
     background-color: #0056b3;
 }
+
+.circle-my-div-icon {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #0056b3;
+    border: 2px solid white;
+}
